src/cli/renderer/snapshots/thndrs_core__renderer__region__tests__empty_live_frame.snap
---
source: src/cli/renderer/region/tests.rs
assertion_line: 30
expression: contents
---
│    | THNDRS                                                                       # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#37f499 bg=#171928 b]=THNDRS [bg=#171928]=                                                                    [bg=#171928]=  
│    | cwd ~/Projects/StormlightLabs/OpenSource/thndrs                              # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=cwd ~/Projects/StormlightLabs/OpenSource/thndrs [bg=#171928]=                           [bg=#171928]=  
│    |                                                                              # [bg=#171928]=   [fg=#3b4261 bg=#171928]= | [bg=#171928]=                                                                           [bg=#171928]=  
│    + workbench                                                                    # [bg=#171928]=   [fg=#37f499 bg=#171928 b]= +  [fg=#ebfafa bg=#171928 b]=workbench [bg=#171928]=                                                                 [bg=#171928]=  
│    |   system                          project                                    # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#ebfafa bg=#171928 b]=  system                        [fg=#abb4da bg=#171928]=    [fg=#ebfafa bg=#171928 b]=project [bg=#171928]=                                 [bg=#171928]=  
│    |      provider  umans                 context  (none)                         # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=     provider  umans            [fg=#abb4da bg=#171928]=    [fg=#abb4da bg=#171928]=   context  (none) [bg=#171928]=                      [bg=#171928]=  
│    |      model     test-model                                                    # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=     model     test-model       [fg=#abb4da bg=#171928]=    [bg=#171928]=                                        [bg=#171928]=  
│    |      search    native             attention                                  # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=     search    native           [fg=#abb4da bg=#171928]=    [fg=#ebfafa bg=#171928 b]=attention [bg=#171928]=                               [bg=#171928]=  
│    |                                      (none)                                  # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=                                [fg=#abb4da bg=#171928]=    [fg=#abb4da bg=#171928]=   (none) [bg=#171928]=                               [bg=#171928]=  
│    |   loaded                                                                     # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#ebfafa bg=#171928 b]=  loaded                        [fg=#abb4da bg=#171928]=    [bg=#171928]=                                        [bg=#171928]=  
│    |      (none)                                                                  # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=     (none)                     [fg=#abb4da bg=#171928]=    [bg=#171928]=                                        [bg=#171928]=  
│    + search                                                                       # [bg=#171928]=   [fg=#37f499 bg=#171928 b]= +  [fg=#ebfafa bg=#171928 b]=search [bg=#171928]=                                                                    [bg=#171928]=  
│    |    native: Umans server-side search; DuckDuckGo HTML fallback via            # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=   native: Umans server-side search; DuckDuckGo HTML fallback via [bg=#171928]=         [bg=#171928]=  
│    |    web_search tool; read_url fetches public HTTP(S) and extracts HTML        # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=   web_search tool; read_url fetches public HTTP(S) and extracts HTML [bg=#171928]=     [bg=#171928]=  
│    + ready                                                                        # [bg=#171928]=   [fg=#37f499 bg=#171928 b]= +  [fg=#ebfafa bg=#171928 b]=ready [bg=#171928]=                                                                     [bg=#171928]=  
│    |   >      Ask for a change, run a command, or inspect this repo.              # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#37f499 bg=#171928 b]=  >       [fg=#abb4da bg=#171928]=Ask for a change, run a command, or inspect this repo. [bg=#171928]=           [bg=#171928]=  
│    |   ?      help                                                                # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#37f499 bg=#171928 b]=  ?       [fg=#abb4da bg=#171928]=help [bg=#171928]=                                                             [bg=#171928]=  
│    |   /model switch models                                                       # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#37f499 bg=#171928 b]=  /model  [fg=#abb4da bg=#171928]=switch models [bg=#171928]=                                                    [bg=#171928]=  
│   ... 4 rows hidden                                                               # [bg=#171928]=   [fg=#abb4da bg=#171928]=... 4 rows hidden [bg=#171928]=                                                            [bg=#171928]=  
│                                                                                   # [bg=#212337]=                                                                                
│    test-session  · idle                                                           # [bg=#212337]=   [bg=#212337]=  [fg=#37f499 bg=#212337 b]=test-session [bg=#212337]=   [fg=#3b4261 bg=#212337]=· idle [bg=#212337]=                                                        [bg=#212337]=  
│    ›                                                                              # [bg=#212337]=   [bg=#212337]=  [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [bg=#212337]=                                                                         [bg=#212337]=  
│    model: test-model   search: native   tok: ↑0 ↓0   git: main clean              # [bg=#212337]=   [bg=#212337]=  [fg=#abb4da bg=#212337]=model: test-model [bg=#212337]=    [fg=#abb4da bg=#212337]=search: native [bg=#212337]=    [fg=#e0e0e0 bg=#212337]=tok: ↑0 ↓0 [bg=#212337]=    [fg=#37f499 bg=#212337]=git: main clean [bg=#212337]=           [bg=#212337]=  
│                                                                                   # [bg=#212337]=
