src/cli/renderer/snapshots/thndrs_core__renderer__region__tests__narrow_live_frame.snap
---
source: src/cli/renderer/region/tests.rs
assertion_line: 30
expression: contents
---
│    | THNDRS                               # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#37f499 bg=#171928 b]=THNDRS [bg=#171928]=                            [bg=#171928]=  
│    | cwd ~/Pr/St/O/thndrs                 # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=cwd ~/Pr/St/O/thndrs [bg=#171928]=              [bg=#171928]=  
│    |                                      # [bg=#171928]=   [fg=#3b4261 bg=#171928]= | [bg=#171928]=                                   [bg=#171928]=  
│    + workbench                            # [bg=#171928]=   [fg=#37f499 bg=#171928 b]= +  [fg=#ebfafa bg=#171928 b]=workbench [bg=#171928]=                         [bg=#171928]=  
│    |   system                             # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#ebfafa bg=#171928 b]=  system [bg=#171928]=                          [bg=#171928]=  
│    |      provider  umans                 # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=     provider  umans [bg=#171928]=              [bg=#171928]=  
│    + search                               # [bg=#171928]=   [fg=#37f499 bg=#171928 b]= +  [fg=#ebfafa bg=#171928 b]=search [bg=#171928]=                            [bg=#171928]=  
│    + ready                                # [bg=#171928]=   [fg=#37f499 bg=#171928 b]= +  [fg=#ebfafa bg=#171928 b]=ready [bg=#171928]=                             [bg=#171928]=  
│    |   >      Ask for a change, run a     # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#37f499 bg=#171928 b]=  >       [fg=#abb4da bg=#171928]=Ask for a change, run a [bg=#171928]=  [bg=#171928]=  
│    |          command, or inspect this    # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=         command, or inspect this [bg=#171928]=  
│    |          repo.                       # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=         repo. [bg=#171928]=                    [bg=#171928]=  
│    |   ?      help                        # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#37f499 bg=#171928 b]=  ?       [fg=#abb4da bg=#171928]=help [bg=#171928]=                     [bg=#171928]=  
│    |   /model switch models               # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#37f499 bg=#171928 b]=  /model  [fg=#abb4da bg=#171928]=switch models [bg=#171928]=            [bg=#171928]=  
│   ... 17 rows hidden                      # [bg=#171928]=   [fg=#abb4da bg=#171928]=... 17 rows hidden [bg=#171928]=                   [bg=#171928]=  
│                                           # [bg=#212337]=                                        
│    test-session  · idle                   # [bg=#212337]=   [bg=#212337]=  [fg=#37f499 bg=#212337 b]=test-session [bg=#212337]=   [fg=#3b4261 bg=#212337]=· idle [bg=#212337]=                [bg=#212337]=  
│    ›  a longer prompt that should wrap    # [bg=#212337]=   [bg=#212337]=  [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=a longer prompt that should wrap [bg=#212337]=  
│        at narrow width                    # [bg=#212337]=   [bg=#212337]=     [fg=#ebfafa bg=#212337]= at narrow width [bg=#212337]=                 [bg=#212337]=  
│    model: test-model                      # [bg=#212337]=   [bg=#212337]=  [fg=#abb4da bg=#212337]=model: test-model [bg=#212337]=                   [bg=#212337]=  
│                                           # [bg=#212337]=
