src/cli/renderer/snapshots/thndrs_core__renderer__region__tests__reasoning_block.snap
---
source: src/cli/renderer/region/tests.rs
assertion_line: 30
expression: contents
---
│                                                                                   # [bg=#171928]=                                                                                
│   Thinking ✓                                                                      # [bg=#171928]=   [fg=#a48cf2 bg=#171928 b]=Thinking ✓ [bg=#171928]=                                                                   [bg=#171928]=  
│   I need to check the file structure first.                                       # [bg=#171928]=   [fg=#abb4da bg=#171928 i]=I need to check the file structure first. [bg=#171928]=                                    [bg=#171928]=
