src/cli/renderer/snapshots/thndrs_core__renderer__region__tests__rust_compiler_output.snap
---
source: src/cli/renderer/region/tests.rs
assertion_line: 30
expression: contents
---
│                                                                                   # [bg=#171928]=                                                                                
│   ✕ run_shell [failed]  program: cargo build                                      # [bg=#171928]=   [fg=#f16c75 bg=#171928]=✕  [fg=#ebfafa bg=#171928 b]=run_shell [fg=#f16c75 bg=#171928]= [failed] [bg=#171928]=   [fg=#abb4da bg=#171928]=program: cargo build [bg=#171928]=                                   [bg=#171928]=  
│      │    Compiling thndrs v0.1.0                                                 # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=    [fg=#8fa1b3 bg=#171928]=Compiling [fg=#c0c5ce bg=#171928]= thndrs v0.1.0 [bg=#171928]=                                              [bg=#171928]=  
│      │ error[E0277]: the trait bound `X: Y` is not satisfied                      # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#8fa1b3 bg=#171928]=error[E0277]: [fg=#c0c5ce bg=#171928]= the trait bound  [fg=#c0c5ce bg=#171928]=` [fg=#8fa1b3 bg=#171928]=X: [fg=#c0c5ce bg=#171928]= Y [fg=#c0c5ce bg=#171928]=` [fg=#c0c5ce bg=#171928]= is not satisfied [bg=#171928]=                   [bg=#171928]=  
│      │   --> src/lib.rs:42:10                                                     # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=   [fg=#8fa1b3 bg=#171928]=-- [fg=#c0c5ce bg=#171928]=> [fg=#c0c5ce bg=#171928]= src/lib.rs:42:10 [bg=#171928]=                                                  [bg=#171928]=  
│      │    |                                                                       # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=    [fg=#c0c5ce bg=#171928]=| [bg=#171928]=                                                                    [bg=#171928]=  
│      │ 42 |     fn foo() -> impl Y {                                              # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#8fa1b3 bg=#171928]=42 [fg=#c0c5ce bg=#171928]=  [fg=#c0c5ce bg=#171928]=| [fg=#c0c5ce bg=#171928]=      [fg=#8fa1b3 bg=#171928]=fn [fg=#c0c5ce bg=#171928]= foo( [fg=#c0c5ce bg=#171928]=) [fg=#c0c5ce bg=#171928]=  [fg=#8fa1b3 bg=#171928]=- [fg=#c0c5ce bg=#171928]=> [fg=#c0c5ce bg=#171928]= impl Y  [fg=#c0c5ce bg=#171928]={ [bg=#171928]=                                           [bg=#171928]=  
│      │    |                    ^^^^^                                              # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=   |                    ^^^^^ [bg=#171928]=                                           [bg=#171928]=
